# NetLicensingClient-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: cmake.yml  netlicesning-client-ci.yml
client_demo/: netlicensing_client_demo.cc  netlicensing_client_demo.cpp
cmake/: FindJsonCpp.cmake
include/netlicensing/: bundle.h  constants.h  context.h  context.hpp  converters.h  country.h  datatypes.h  entity.h  exception.h  info.h  license.h  license_template.h  license_type.h  licensee.h  licensing_model.h  mapper.h  netlicensing.h  payment_method.h  product.h  product_module.h  service.h  service.hpp  token.h  transaction.h  traversal.h  validation_parameters.h  validation_result.h  version.h  version.hpp
src/: context.cc  context.cpp  entity.cc  info.cc  licensee.cc  mapper.cc  netlicensing.cc  product.cc  service.cc  service.cpp  validation_result.cc
tests/: common.h  recursive_product.json  run_tests.cc  test_context.cc  test_errors_parsing.cc  test_product.cc  test_validation.cc
tests/json/: licensee_validate_failed.json  licensee_validation_result_plain.json  licensee_validation_result_recursive.json  product.json  product_list.json
